# python-canonicaljson-rs

./: .gitignore  CHANGELOG.rst  CONTRIBUTORS.rst  Cargo.toml  README.rst  canonicaljson.pyi  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  build.yml  publish.yml
src/: lib.rs
tests/: test_dumps.py
